--- a/rgb2hex.html
+++ b/rgb2hex.html
@@ -60,23 +60,26 @@
     </header>
  
     <section class="logic">
+      <div class="body">
       
 <div class="flex-reg">
-<input type="text" id="inputR" class="abc" placeholder="Enter the Red Component">
-<input type="text" id="inputG" class="abc" placeholder="Enter the Green Component">
-<input type="text" id="inputB" class="abc" placeholder="Enter the Blue Component">
-</div>
-<div class="flex-btn">
-<input type="button" id="convertButton" value="Convert" class="button">
-</div>
+<div><input type="text" id="inputR" class="abc" placeholder="Enter the Red Component"></div>
+<div><input type="text" id="inputG" class="abc" placeholder="Enter the Green Component"></div>
+<div><input type="text" id="inputB" class="abc" placeholder="Enter the Blue Component"></div>
+<!-- </div> -->
+<!-- <div class="flex-btn"> -->
+<div><input type="button" id="convertButton" value="Convert" class="button abc"></div>
+<!-- </div> -->
 
 <!-- <input type="button" id="decode-64" value="Decode-64" >  -->
 
-<div class="flex-reg">
-    <input type="text" id="output" class="op" placeholder="See the output here">
-    <input type="text"  class="op" id="co" placeholder="See the Output colour">
+<!-- <div class="flex-reg"> -->
+ 
+   <div> <input type="text" id="output" class="abc" placeholder="See the output here"></div>
+   <div> <input type="text"  class="abc" id="co" placeholder="See the Output colour"></div>
   </div>
 </section>
+</div>
     <footer class="footer">
         <!-- <div class="footer-div-1"> -->
         <h6 class="footer-para">Colors Conversion. </h6>
