--- a/rgb2hex.html
+++ b/rgb2hex.html
@@ -60,7 +60,7 @@
     </header>
  
     <section class="logic">
-      <div class="body">
+      <div class="body-flex">
       
 <div class="flex-reg">
 <div><input type="text" id="inputR" class="abc" placeholder="Enter the Red Component"></div>
